--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "OpenIDConnect": {
+    "Authority": "https://accounts.google.com",
+    "ClientId": "",
+    "ClientSecret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
